--- a/part1/14/Dockerfile.frontend
+++ b/part1/14/Dockerfile.frontend
@@ -3,7 +3,7 @@ FROM node:14
 WORKDIR /usr/src/app
 COPY . .
 
-ENV REACT_APP_BACKEND_URL=http://localhost:8080/
+ENV REACT_APP_BACKEND_URL=http://localhost:8080
 
 RUN npm install; npm install -g serve
 RUN npm run build
